@@ -29,13 +29,12 @@ System Requirements
 
   Name			Minimum version		URL						NOTE
   ----			---------------		---						----
-  * Python		2.3 or higher		http://www.python.org/
+  * Python		2.4 or higher		http://www.python.org/
   * GTK+		tested on 2.6.4		http://www.gtk.org/
   * PyGTK (with glade2)	tested on 2.6.1		http://www.pygtk.org/
   * SQLAlchemy		0.5			http://www.sqlalchemy.org/
   * pysqlite2		2			http://initd.org/tracker/pysqlite		Python 2.5's sqlite3 module will be used if available
   * PIL						http://www.pythonware.com/products/pil/
-  * PyXML					http://pyxml.sf.net/
   * ReportLab		1.19			http://www.reportlab.org
 
 Other (optional) dependencies:
